--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <li><a href="#">Контакты</a></li>
         </ul>
     </header>
-    <main>
+    <div class="main">
         <div class="capt">
-            <h1>Цветные пластиковые окна</h1>
+                    <h1>Цветные пластиковые окна</h1>
             <p>Ламинируем профиль ПВХ для предания окнам цвета и фактуры дерева</p>
         </div>
 
@@ -63,25 +63,25 @@
 			<h3>Подберите цвет для своих окон:</h3>
 			<div class="color-window">
 				
-				<input type="checkbox" id="color1">
+				<input type="radio" id="color1" name="color">
 				<label for="color1" id="colors1"> <img src="image/check.png" class="chek"alt=""> </label>
 
-				<input type="checkbox" id="color2">
+				<input type="radio" id="color2" name="color">
 				<label for="color2" id="colors2"> <img src="image/check.png" class="chek"alt=""></label>
 
-				<input type="checkbox" id="color3">
+				<input type="radio" id="color3" name="color">
 				<label for="color3" id="colors3"> <img src="image/check.png" class="chek"alt=""></label>
 
-				<input type="checkbox" id="color4">
+				<input type="radio" id="color4" name="color">
 				<label for="color4" id="colors4"> <img src="image/check.png" class="chek"alt=""></label>
 
-				<input type="checkbox" id="color5">
+				<input type="radio" id="color5" name="color">
 				<label for="color5" id="colors5"> <img src="image/check.png" class="chek"alt=""></label>
 
-				<input type="checkbox" id="color6">
+				<input type="radio" id="color6" name="color">
 				<label for="color6" id="colors6"> <img src="image/check.png" class="chek"alt=""></label>
 
-				<input type="checkbox" id="color7">
+				<input type="radio" id="color7" name="color">
 				<label for="color7" id="colors7"> <img src="image/check.png" class="chek"alt=""></label>
 			</div>
 			<p>Больше 50 вариантов  цветов и фактур спрашивайте
@@ -141,7 +141,7 @@
 			</div>
 
         </div>
-    </main>
+    </div>
     <footer>
      <div class="footer-wrap"><ul class="nav-menu">
      	       <li><a href="#">О копании</a></li>
